alcuni fix al readme e refactoring